[gd_scene load_steps=2 format=3 uid="uid://fa7xb6y6p17m"]

[ext_resource type="Script" path="res://scenes/components/draggable_component/draggable_component.gd" id="1_42dfu"]

[node name="DraggableComponent" type="Area2D"]
script = ExtResource("1_42dfu")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
